# rust-basic-actix-web

./: Cargo.toml  README.md  wrk.lua
.github/: dependabot.yml
.github/workflows/: on_any_branch.yml  on_dependabot.yml
src/: lib.rs  main.rs
src/domain/: mod.rs
src/domain/activities/: models.rs  service.rs
src/routes/: mod.rs
src/routes/activities/: dto.rs  handler.rs  mod.rs
src/services/: services.rs
