[package]
name = "rust-basic-actix-web"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"] }

[profile.release]
opt-level = 3            # Maximum optimization
lto = true               # Enable Link Time Optimization
codegen-units = 1        # Reduce parallel code generation units for better optimization
panic = "abort"          # Remove panic unwinding overhead
strip = true             # Strip symbols from binary
